# obs-studio

frontend/cmake/: ui-dialogs.cmake
frontend/dialogs/: OBSBasicProperties.cpp  OBSBasicProperties.hpp
shared/properties-view/: CMakeLists.txt  properties-view.cpp
shared/properties-view-idian/: CMakeLists.txt  PropertiesView.cpp  PropertiesView.hpp  PropertiesView_Property.cpp  PropertiesView_Property_List.cpp
shared/qt/double-slider/: CMakeLists.txt
shared/qt/idian/include/Idian/: Row.hpp
shared/qt/idian/widgets/: Row.cpp
test/test-input/: test-random.c
